--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@uiw/react-color-shade-slider": "^2.8.0",
+    "@uiw/react-color-wheel": "^2.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-ga": "^3.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-slick": "^0.30.2"
